--- a/FastAPI/pyproject.toml
+++ b/FastAPI/pyproject.toml
@@ -10,6 +10,8 @@ packages = [{include = "FastAPI"}]
 python = "^3.8"
 fastapi = {extras = ["all"], version = "^0.89.1"}
 pydantic = "^1.10.4"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 
 
 [build-system]
