--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,23 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
+    hostname: test_mongo
     ports:
       - '27017:27017'
     volumes:
       - ./mongo-db-volume:/data/db
 
+
+  fastapi:
+    build:
+      context: ./
+      dockerfile: Dockerfile
+    hostname: test_fastapi
+    ports:
+      - '8000:8000'
+    volumes:
+      - ./FastAPI/:/app
+    depends_on:
+      - mongo
+    command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
 
